[package]
name = "ferric_view"
authors = ["Retrokiller543 <emil.schutt@gmail.com>"]
description = "A CLI tool to list files and direcories in a directory"
version = "1.0.0"
rust-version = "1.72.0"
license = "MIT"
repository = "https://github.com/retrokiller543/pdf_translator"
readme = "README.md"
keywords = ["ls", "file", "translator"]
categories = ["command-line-utilities"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
toml = "0.7.6"
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
